css/theme.css
/* ... */
.entry-content {
  position: relative;
  padding: 25px;
  padding-bottom: 80px;
  transform-style: preserve-3d;
}
@media (max-width: 768px) {
  .entry-content {
    margin-top: 0;
  }
}
@media (max-width: 768px) {
  .entry-content {
    grid-column: 1;
    margin-top: 45px;
    width: calc(100vw - 45px);
    margin-left: 45px;
    margin-top: 135px;
  }
}
.entry-content p {
  text-align: justify;
}
.entry-content p + p {
  text-indent: 45px;
}
.entry-content p:first-of-type {
  font-size: 1.2em;
}
@media (max-width: 768px) {
  .entry-content p:first-of-type {
    font-size: 1.2rem;
  }
}
@media (max-width: 768px) {
  .entry-content p {
    font-size: 1rem;
    hyphens: auto;
    -ms-word-break: break-all;
    word-break: break-all;
    -webkit-hyphens: auto;
    -moz-hyphens: auto;
  }
}
.entry-content h1 {
  color: #292829;
  font-size: 4.3rem;
  margin-top: 15px;
  margin-bottom: 30px;
}
@media (max-width: 1450px) {
  .entry-content h1 {
    font-size: 3.2rem;
  }
}
@media (max-width: 768px) {
  .entry-content h1 {
    font-size: 2.5rem;
  }
}
.entry-content .intro {
  font-size: 2.3vw;
  margin-top: 50px;
}
.entry-content blockquote p {
  font-size: 1.8rem !important;
}
.entry-content blockquote cite {
  position: relative;
  margin-top: -100%;
  font-style: normal;
}
.entry-content .filler {
  align-self: stretch;
}
.entry-content .wp-block-video {
  padding: 0;
}
.entry-content .wp-block-pullquote {
  padding: 1em 0;
  text-align: left;
  justify-content: flex-end;
}
.entry-content .wp-block-column {
  padding-top: 20px;
}
.entry-content .wp-block-column:not(:first-child) {
  margin-left: 20px;
}
.entry-content .wp-block-column:not(:last-child) {
  margin-right: 20px;
}
.entry-content .wp-block-column h3 {
  font-weight: 300;
  font-size: 2rem;
}
.entry-content .wp-block-image img {
  margin: 0;
  width: 100%;
  max-width: none;
  position: absolute;
  margin-left: -92.5%;
  -webkit-box-shadow: 0 0 25px rgba(0, 0, 0, 0.45);
  box-shadow: 0 0 25px rgba(0, 0, 0, 0.45);
  object-fit: cover;
  padding: 0 !important;
  background-color: #FCFAF3;
  border: 2px solid #292829;
  transform: translateZ(-10px) translateY(-25px);
}
.entry-content .wp-block-image img:hover {
  transform: translateZ(100px) translateY(-25px);
}
.entry-content .wp-block-image.inline img {
  position: relative;
  margin: 0;
  margin-left: -40%;
  -webkit-box-shadow: 0 0 25px rgba(0, 0, 0, 0.45);
  box-shadow: 0 0 25px rgba(0, 0, 0, 0.45);
  object-fit: cover;
  background-color: #FCFAF3;
  border: 2px solid #292829;
  transform: translateZ(0px) translateY(0px);
  overflow: hidden;
  max-width: 100%;
}
.entry-content .wp-block-image.inline figcaption {
  padding: 0;
  margin-bottom: 0px !important;
  transform: translateY(0px);
}
.entry-content .wp-block-image.inline figcaption:before {
  content: "↖︎";
}
@media (max-width: 768px) {
  .entry-content .wp-block-image.inline figcaption {
    font-size: 1rem !important;
  }
}
.entry-content .wp-block-image.inline-sm img {
  position: relative;
  margin: 0;
  margin-left: -32.5px;
  -webkit-box-shadow: 0 0 25px rgba(0, 0, 0, 0.45);
  box-shadow: 0 0 25px rgba(0, 0, 0, 0.45);
  object-fit: cover;
  background-color: #FCFAF3;
  border: 2px solid #292829;
  transform: translateZ(0px) translateY(0px);
  overflow: hidden;
  max-width: 100%;
}
.entry-content .wp-block-image.inline-sm figcaption {
  padding: 0;
  margin-bottom: 0px !important;
  transform: translateY(0px);
}
.entry-content .wp-block-image.inline-sm figcaption:before {
  content: "↑";
}
@media (max-width: 768px) {
  .entry-content .wp-block-image.inline-sm figcaption {
    font-size: 1rem !important;
  }
}
.entry-content .wp-block-separator {
  border-color: #292829;
  margin: 0;
  transform: translateY(1px);
}
.entry-content .wp-block-video {
  width: 100%;
  margin-right: 0;
}
.entry-content .wp-block-video video {
  position: relative;
  margin: 0;
  margin-left: -50%;
  -webkit-box-shadow: 0 0 25px rgba(0, 0, 0, 0.45);
  box-shadow: 0 0 25px rgba(0, 0, 0, 0.45);
  background-color: #FCFAF3;
  border: 2px solid #292829;
  height: auto;
  width: 100%;
  overflow: hidden;
  min-width: 100%;
}
@media (max-width: 768px) {
  .entry-content .wp-block-video video {
    margin-left: -32.5px;
  }
}
.entry-content .wp-block-video figcaption {
  padding: 0;
  margin-bottom: 0px !important;
  transform: translateY(0px);
}
.entry-content .wp-block-video figcaption:before {
  content: "↖︎";
}
@media (max-width: 768px) {
  .entry-content .wp-block-video figcaption {
    font-size: 1rem !important;
  }
}
.entry-content .wp-block-embed.is-type-video {
  padding: 30px 0;
}
.entry-content .wp-block-embed.is-type-video .wp-block-embed__wrapper {
  position: relative;
  margin: 0;
  margin-left: -50%;
  -webkit-box-shadow: 0 0 25px rgba(0, 0, 0, 0.45);
  box-shadow: 0 0 25px rgba(0, 0, 0, 0.45);
  object-fit: cover;
  background-color: #FCFAF3;
  border: 2px solid #292829;
  padding-bottom: 56.25%;
  height: 0;
  z-index: 0;
  overflow: hidden;
  max-width: 100%;
}
@media (max-width: 768px) {
  .entry-content .wp-block-embed.is-type-video .wp-block-embed__wrapper {
    margin-left: -32.5px;
  }
}
.entry-content .wp-block-embed.is-type-video .wp-block-embed__wrapper iframe, .entry-content .wp-block-embed.is-type-video .wp-block-embed__wrapper object, .entry-content .wp-block-embed.is-type-video .wp-block-embed__wrapper embed {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
.entry-content .wp-block-embed.is-type-video figcaption {
  padding: 0;
  margin-bottom: 0px !important;
  transform: translateY(0px);
}
.entry-content .wp-block-embed.is-type-video figcaption:before {
  content: "↖︎";
}
@media (max-width: 768px) {
  .entry-content .wp-block-embed.is-type-video figcaption {
    font-size: 1rem !important;
  }
}
.entry-content .wp-block-gallery .blocks-gallery-grid {
  width: 100%;
}
/* ... */

